--- a/_posts/2015-11-23-gomobile-html5-native-app.html
+++ b/_posts/2015-11-23-gomobile-html5-native-app.html
@@ -3,5 +3,5 @@ layout: default
 title: HTML5+gomobile+android studio
 ---
 <h2>{{ page.title }}</h2>
-<p>Just an idea</p>
+<p>Just an idea <a href="https://godoc.org/golang.org/x/mobile/exp/app/debug"><img src="https://godoc.org/golang.org/x/mobile/exp/app/debug?status.svg" alt="GoDoc"></a></p>
 <p>{{ page.date | date_to_string }}</p>
