--- a/_posts/2015-11-23-gomobile-html5-native-app.html
+++ b/_posts/2015-11-23-gomobile-html5-native-app.html
@@ -4,4 +4,9 @@ title: HTML5+gomobile+android studio
 ---
 <h2>{{ page.title }}</h2>
 <p>Just an idea <a href="https://godoc.org/golang.org/x/mobile/exp/app/debug"><img src="https://godoc.org/golang.org/x/mobile/exp/app/debug?status.svg" alt="GoDoc"></a></p>
+<p> {% highlight ruby %}
+def foo
+  puts 'foo'
+end
+{% endhighlight %}</p>
 <p>{{ page.date | date_to_string }}</p>
