--- a/_posts/2015-11-23-gomobile-html5-native-app.html
+++ b/_posts/2015-11-23-gomobile-html5-native-app.html
@@ -4,9 +4,14 @@ title: HTML5+gomobile+android studio
 ---
 <h2>{{ page.title }}</h2>
 <p>Just an idea <a href="https://godoc.org/golang.org/x/mobile/exp/app/debug"><img src="https://godoc.org/golang.org/x/mobile/exp/app/debug?status.svg" alt="GoDoc"></a></p>
-<p> {% highlight ruby linenos %}
-def foo
-  puts 'foo'
-end
-{% endhighlight %}</p>
+<p>
+{% highlight go linenos %}
+import "fmt"
+func main(){
+	fmt.Println("hello world")
+}
+{% endhighlight %}
+</p>
+
+{% gist parkr/c08ee0f2726fd0e3909d %}
 <p>{{ page.date | date_to_string }}</p>
