path for localhosting

--- a/_posts/2015-11-23-gomobile-html5-native-app.html
+++ b/_posts/2015-11-23-gomobile-html5-native-app.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 title: HTML5+gomobile+android studio
+root: "inizio.github.io/"
 ---
+
 <h2>{{ page.title }}</h2>
 <p>Just an idea <a href="https://godoc.org/golang.org/x/mobile/exp/app/debug"><img src="https://godoc.org/golang.org/x/mobile/exp/app/debug?status.svg" alt="GoDoc"></a></p>
 <p>
