--- a/src/tpl.html
+++ b/src/tpl.html
@@ -12,5 +12,6 @@
   <div id="app"></div>
   <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   <script type="text/x-mathjax-config">MathJax.Hub.Config({ tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
+  <script src="https://cdn.optimizely.com/js/8115830024.js"></script>
 </body>
 </html>
