--- a/src/tpl.html
+++ b/src/tpl.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, user-scalable=no">
     <meta name="renderer" content="webkit">
     <meta name="theme-color" content="#ffffff">
+    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
     <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/x-mathjax-config">MathJax.Hub.Config({ tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
     <title>$title</title>
